[metadata]
name = cloud-api-clients
version = 0.0.1

description = Cloud API Clients - native clients for reuse based on open-api spec.
long_description = file: README.md
license = All Rights Reserved

[options]
packages = find:
install_requires =
  fastapi
  cloud_api @ git+ssh://git@github.com/aptible/cloud-api.git
  executioner-client @ git+ssh://git@github.com/aptible/executioner-clients.git#subdirectory=clients/python

[options.extras_require]
dev =
  psycopg2
  boto3-stubs[kms]
